--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
   - 1.8.7
   - 1.9.3
   - 2.0.0
+  - 2.1.0
 
 env:
   - "RAILS_VERSION=2.2.0"
@@ -24,6 +25,10 @@ matrix:
     - rvm: 2.0.0
       env: "RAILS_VERSION=2.2.0"
     - rvm: 2.0.0
+      env: "RAILS_VERSION=2.3.0"
+    - rvm: 2.1.0
+      env: "RAILS_VERSION=2.2.0"
+    - rvm: 2.1.0
       env: "RAILS_VERSION=2.3.0"
 
 notifications:
